fix(docs): correct overflow cdk pages

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
@@ -114,6 +114,7 @@ app-component-sidenav {
 .docs-component-sidenav-body-content {
   display: flex;
   flex: 1 1 auto;
+  flex-direction: column;
 }
 
 @media (max-width: $small-breakpoint-width) {
